--- a/game-server/package.json
+++ b/game-server/package.json
@@ -1,9 +1,10 @@
 {
-    "name":"RealName",
-    "version":"0.0.1",
-    "private":false,
-    "dependencies":{
-        "pomelo":"1.1.3"
-    }
+  "name": "RealName",
+  "version": "0.0.1",
+  "private": false,
+  "dependencies": {
+    "pomelo": "1.1.3",
+    "crc": "0.2.0"
+  }
 }
 
