--- a/game-server/package.json
+++ b/game-server/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
-    "pomelo": "1.1.3",
-    "crc": "0.2.0"
+    "body-parser": "^1.10.1",
+    "cookie-parser": "^1.3.3",
+    "crc": "0.2.0",
+    "express": "^4.11.0",
+    "pomelo": "1.1.3"
   }
 }
-
